# plasma-network-audio

./: CMakeLists.txt  README.md  plasma-network-audio.spec
.github/workflows/: build.yml
src/: CMakeLists.txt  avahi_browser.cpp  avahi_browser.h  kcm_network_audio.json  kded_network_audio.notifyrc  network_audio_adaptor.cpp  network_audio_adaptor.h  network_audio_daemon.cpp  network_audio_daemon.json  network_audio_device.h  network_audio_kcm.cpp  network_audio_kcm.h  network_audio_model.cpp  network_audio_model.h  pipewire_controller.cpp  preference_store.cpp  preference_store.h
src/daemon/: CMakeLists.txt  network_audio_daemon.cpp  network_audio_daemon.h  pipewire_controller.h
src/kcm/: CMakeLists.txt  network_audio_kcm.cpp
src/ui/: DeviceDelegate.qml  main.qml
